--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.0
 Django==4.0.3
 django-appconf==1.0.5
+django-filter==21.1
 django-imagekit==4.1.0
 djangorestframework==3.13.1
 pilkit==2.0
